--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -4,35 +4,39 @@ on:
   push:
     branches: [main]
 
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
 jobs:
   test:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-      - name: Установка зависимостей
+      - name: Install dependencies
         run: npm ci
 
-      - name: Установка браузеров Playwright
+      - name: Install Playwright browsers
         run: npx playwright install --with-deps
 
-      - name: Запуск тестов с HTML-отчётом
+      - name: Run Playwright tests
         run: npx playwright test --reporter=html
 
-      - name: Загрузка HTML-отчёта
-        uses: actions/upload-pages-artifact@v1
+      - name: Upload Playwright HTML report
+        uses: actions/upload-artifact@v4
         with:
+          name: github-pages
           path: playwright-report
+          retention-days: 1
 
   deploy:
     needs: test
     runs-on: ubuntu-latest
-    permissions:
-      pages: write
-      id-token: write
 
     steps:
-      - name: Деплой в GitHub Pages
+      - name: Deploy GitHub Pages
         uses: actions/deploy-pages@v2
