--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -47,13 +47,12 @@ jobs:
         env:
           CI: true
 
-      - name: Upload HTML report
+      - name: Upload Playwright HTML report
         uses: actions/upload-artifact@v4
-        if: always()
         with:
-          name: playwright-report
-          path: playwright-report/
-          retention-days: 7
+          name: github-pages
+          path: playwright-report
+          retention-days: 1
 
       - name: Upload JUnit report
         uses: actions/upload-artifact@v4
