--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -79,3 +79,22 @@ jobs:
         with:
           artifact_name: playwright-report
           target-branch: gh-pages
+     # Single deploy job since we're just deploying
+  deploy2:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Setup Pages
+        uses: actions/configure-pages@v5
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          # Upload entire repository
+          path: '.'
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
