--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -81,6 +81,7 @@ jobs:
           target-branch: gh-pages
      # Single deploy job since we're just deploying
   deploy2:
+    needs: test
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
